--- a/zubieliciousApp/www/index.html
+++ b/zubieliciousApp/www/index.html
@@ -12,6 +12,13 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- maps -->
+    <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
+
+
+    <!-- google maps javascript -->
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
