--- a/zubieliciousApp/www/index.html
+++ b/zubieliciousApp/www/index.html
@@ -15,9 +15,17 @@
     <!-- maps -->
     <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
 
-
-    <!-- google maps javascript -->
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+    <!-- <script src="http://code.ionicframework.com/0.9.19/js/ionic.js"></script> -->
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-animate.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-route.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-touch.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-sanitize.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/ionic-angular.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular-ui/angular-ui-router.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=weather,visualization&sensor=false&language=en&v=3.14"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script src="https://rawgithub.com/nlaplante/angular-google-maps/master/dist/angular-google-maps.min.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
