--- a/zubieliciousApp/www/index.html
+++ b/zubieliciousApp/www/index.html
@@ -9,9 +9,9 @@
     <link href="lib/ionic/css/style.css" rel="stylesheet">
     <!-- <link href="css/style.css" rel="stylesheet"> -->
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+   <!--  IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+
 
     <!-- maps -->
     <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
