--- a/zubieliciousApp/platforms/ios/www/index.html
+++ b/zubieliciousApp/platforms/ios/www/index.html
@@ -6,11 +6,27 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="lib/ionic/css/style.css" rel="stylesheet">
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+   <!--  IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+
+
+    <!-- maps -->
+    <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
+
+    <!-- <script src="http://code.ionicframework.com/0.9.19/js/ionic.js"></script> -->
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-animate.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-route.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-touch.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular/angular-sanitize.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/ionic-angular.js"></script>
+  <script src="http://code.ionicframework.com/0.9.19/js/angular-ui/angular-ui-router.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=weather,visualization&sensor=false&language=en&v=3.14"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script src="https://rawgithub.com/nlaplante/angular-google-maps/master/dist/angular-google-maps.min.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -21,9 +37,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/activities.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="zubieliciousApp">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
