--- a/zubieliciousApp/www/index.html
+++ b/zubieliciousApp/www/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -38,6 +41,11 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/activities.js"></script>
+    <script src="Intro/edge_includes/jquery-2.0.3.min.js"></script>
+    <script src="Intro/edge_includes/edge.3.0.0.min.js"></script>
+    <script src="Intro/Intro_edge.js"></script>
+    <script src="Intro/Intro_edgeActions.js"></script>
+    <script src="Intro/Intro_edgePreload.js"></script>
   </head>
 
   <body ng-app="zubieliciousApp">
